...
            let thirdRow = "Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(bestGameDate))\n"
            let fourthRow = "Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%"
            let text = firstRow + secondRow + thirdRow + fourthRow
            
            viewController?.showAlert(
                with: .init(
                    title: "Этот раунд окончен!",
                    message: text,
                    buttonText: "Сыграть еще раз",
                    completion: { [weak self] in
                        self?.restartGame()
                    }
                )
...
